--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
         "@angular/http": "4.4.4",
         "@angular/platform-browser": "4.4.4",
         "@angular/platform-browser-dynamic": "4.4.4",
+        "@ionic-native/ble": "^4.4.0",
         "@ionic-native/core": "4.3.2",
         "@ionic-native/native-storage": "^4.3.3",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-ble-central": "^1.1.4",
+        "cordova-plugin-compat": "^1.0.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-ionic-webview": "^1.1.11",
         "cordova-plugin-nativestorage": "^2.2.2",
@@ -51,7 +54,8 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-ble-central": {}
         },
         "platforms": [
             "android"
